# Logistics-data-portfolio

./: .gitignore  LICENSE  README.md  README.txt  inventario_kpis.xlsx  inventory_analisis ipynb  inventory_analysis.ipynb  inventory_transactions.csv  monthly_sales.csv  product_sales.csv  pyproject.toml  requirements.txt  streamlit_app.py  transactions.csv
.github/workflows/: ci.yml
src/inventory/: __init__.py  config.py  data_gen.py  kpis.py
tests/: conftest.py  test_data_gen.py  test_kpis.py
